<resources>
    <string name="app_name">TastingNotesApp</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="webclientid">400335922668-h0qca18fueql01id8ln3cmln3hm9sbi9.apps.googleusercontent.com</string>
    <string name="welcome">Welcome, %s!</string>
    <string name="title_activity_maps">Map</string>
    <string name="forum_tab">Feed</string>
    <string name="map_tab">Map</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_note">AddNoteActivity</string>
    <string name="title_activity_my_posts">MyPostsActivity</string>

    <string-array name="category_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
        <item>Alcohol</item>
        <item>Coffee</item>
        <item>Dessert</item>
        <item>Other</item>
    </string-array>

    <string-array name="category_array2">
        <item>All</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
        <item>Alcohol</item>
        <item>Coffee</item>
        <item>Dessert</item>
        <item>Other</item>
    </string-array>
</resources>
